# cifar10-cnn-image-classifier

./: .gitignore  README.md  predict.py  pyproject.toml
