[tool.poetry]
name = "image-classifier-app"
version = "0.1.0"
description = "Image classifier application"
authors = ["Aleksa Mihajlovic <mihajlovic.aleksa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
tensorflow = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"